--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [tool.poetry]
-name = "camtrapdb_workbench"
+name = "megadetector-desktop"
 version = "0.0.0"
-description = ""
+description = "MegaDetector Desktop Application"
 authors = ["Ben Evans <ben@bluechimp.io>"]
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+camtrapml = "0.2.3"
 
 [tool.poetry.dev-dependencies]
+py2app = "^0.28"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
