--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["Ben Evans <ben@bluechimp.io>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 camtrapml = "0.2.3"
 
 [tool.poetry.dev-dependencies]
 py2app = "^0.28"
+py2exe = "^0.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
