--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -20,4 +20,4 @@ jobs:
           python-version: "3.9"
           cache: "poetry"
       - run: poetry install
-      - run: poetry run python setup_win.py
+      - run: python setup_win.py py2exe
