--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install poetry
         run: pipx install poetry
+      - name: Install Python TK
+        run: brew install python-tk
       - uses: actions/setup-python@v3
         with:
           python-version: "3.9"
