--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,32 +6,65 @@
 trigger:
 - main
 
-pool:
-  vmImage: macOS-latest
+jobs:
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.9'
-    architecture: 'x64'
+- job: macOS
+  pool:
+    vmImage: 'macOS-latest'
+  steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.9'
+      architecture: 'x64'
 
 
-- script: python -m pip install --upgrade pip
-  displayName: 'Upgrade Pip'
+  - script: python -m pip install --upgrade pip
+    displayName: 'Upgrade Pip'
 
-- script: python -m pip install .
-  displayName: 'Install Deps'
+  - script: python -m pip install .
+    displayName: 'Install Deps'
 
-- script: |
-    pyinstaller -y macos.spec
-  displayName: 'Build pyInstaller Application'
+  - script: |
+      pyinstaller -y macos.spec
+    displayName: 'Build pyInstaller Application'
 
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.SourcesDirectory)/dist'
-    archiveFile: '$(Build.SourcesDirectory)/dist.zip'
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(Build.SourcesDirectory)/dist'
+      archiveFile: '$(Build.SourcesDirectory)/dist.zip'
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    artifactName: '$(Agent.OS)'
-    pathtoPublish: '$(Build.SourcesDirectory)/dist.zip'
+  - task: PublishBuildArtifacts@1
+    inputs:
+      artifactName: '$(Agent.OS)'
+      pathtoPublish: '$(Build.SourcesDirectory)/dist.zip'
+
+- job: Windows
+  pool:
+    vmImage: 'windows-latest'
+
+  steps:
+    - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.9'
+      architecture: 'x64'
+
+
+  - script: python -m pip install --upgrade pip
+    displayName: 'Upgrade Pip'
+
+  - script: python -m pip install .
+    displayName: 'Install Deps'
+
+  - script: |
+      pyinstaller -y win.spec
+    displayName: 'Build pyInstaller Application'
+
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(Build.SourcesDirectory)/dist'
+      archiveFile: '$(Build.SourcesDirectory)/dist.zip'
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      artifactName: '$(Agent.OS)'
+      pathtoPublish: '$(Build.SourcesDirectory)/dist.zip'
