--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,36 +1,65 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
 
 trigger:
-- main
+  - main
 
-pool:
-  vmImage: ubuntu-latest
-strategy:
-  matrix:
-    Python27:
-      python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
+jobs:
+  - job: macOS
+    pool:
+      vmImage: "macOS-latest"
+    steps:
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: "3.9"
+          architecture: "x64"
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+      - script: pipx install poetry
+        displayName: "Install Poetry"
 
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r requirements.txt
-  displayName: 'Install dependencies'
+      - script: poetry install
+        displayName: "Install Dependencies"
 
-- script: |
-    pip install pytest pytest-azurepipelines
-    pytest
-  displayName: 'pytest'
+      - script: |
+          poetry run pyinstaller -y macos.spec
+        displayName: "Build pyInstaller Application"
+      - task: ArchiveFiles@2
+        inputs:
+          rootFolderOrFile: "$(Build.SourcesDirectory)/dist"
+          archiveFile: "$(Build.SourcesDirectory)/dist.zip"
+
+      - task: PublishBuildArtifacts@1
+        inputs:
+          artifactName: "$(Agent.OS)"
+          pathtoPublish: "$(Build.SourcesDirectory)/dist.zip"
+
+  - job: Windows
+    pool:
+      vmImage: "windows-latest"
+
+    steps:
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: "3.9"
+          architecture: "x64"
+
+      - script: pipx install poetry
+        displayName: "Install Poetry"
+
+      - script: poetry install
+        displayName: "Install Dependencies"
+
+      - script: |
+          poetry run pyinstaller -y macos.spec
+        displayName: "Build pyInstaller Application"
+      - task: ArchiveFiles@2
+        inputs:
+          rootFolderOrFile: "$(Build.SourcesDirectory)/dist"
+          archiveFile: "$(Build.SourcesDirectory)/dist.zip"
+
+      - task: PublishBuildArtifacts@1
+        inputs:
+          artifactName: "$(Agent.OS)"
+          pathtoPublish: "$(Build.SourcesDirectory)/dist.zip"
