use system pyinstaller on macos build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
         displayName: "Install Dependencies"
 
       - script: |
-          poetry run pyinstaller -y macos.spec
+          pyinstaller -y macos.spec
         displayName: "Build pyInstaller Application"
       - task: ArchiveFiles@2
         inputs:
