--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
       - script: pipx install poetry
         displayName: "Install Poetry"
 
-      - script: poetry export -f requirements.txt --output requirements.txt --without-hashes
+      - script: poetry export -f requirements.txt --output requirements.txt --without-hashes --dev
         displayName: "Export requirements.txt"
 
       - script: pip install -r requirements.txt
@@ -38,31 +38,31 @@ jobs:
           artifactName: "$(Agent.OS)"
           pathtoPublish: "$(Build.SourcesDirectory)/dist.zip"
 
-  - job: Windows
-    pool:
-      vmImage: "windows-latest"
+  # - job: Windows
+  #   pool:
+  #     vmImage: "windows-latest"
 
-    steps:
-      - task: UsePythonVersion@0
-        inputs:
-          versionSpec: "3.9"
-          architecture: "x64"
+  #   steps:
+  #     - task: UsePythonVersion@0
+  #       inputs:
+  #         versionSpec: "3.9"
+  #         architecture: "x64"
 
-      - script: pipx install poetry
-        displayName: "Install Poetry"
+  #     - script: pipx install poetry
+  #       displayName: "Install Poetry"
 
-      - script: poetry install
-        displayName: "Install Dependencies"
+  #     - script: poetry install
+  #       displayName: "Install Dependencies"
 
-      - script: |
-          poetry run pyinstaller -y macos.spec
-        displayName: "Build pyInstaller Application"
-      - task: ArchiveFiles@2
-        inputs:
-          rootFolderOrFile: "$(Build.SourcesDirectory)/dist"
-          archiveFile: "$(Build.SourcesDirectory)/dist.zip"
+  #     - script: |
+  #         poetry run pyinstaller -y macos.spec
+  #       displayName: "Build pyInstaller Application"
+  #     - task: ArchiveFiles@2
+  #       inputs:
+  #         rootFolderOrFile: "$(Build.SourcesDirectory)/dist"
+  #         archiveFile: "$(Build.SourcesDirectory)/dist.zip"
 
-      - task: PublishBuildArtifacts@1
-        inputs:
-          artifactName: "$(Agent.OS)"
-          pathtoPublish: "$(Build.SourcesDirectory)/dist.zip"
+  #     - task: PublishBuildArtifacts@1
+  #       inputs:
+  #         artifactName: "$(Agent.OS)"
+  #         pathtoPublish: "$(Build.SourcesDirectory)/dist.zip"
