--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -16,18 +16,14 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Install poetry
-        run: pipx install poetry
-      - name: Install Python TK
-        run: brew install python-tk
-      - uses: actions/setup-python@v4
+      - name: Configuring conda
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: "3.10"
-          cache: "poetry"
-      - run: poetry install
+          auto-update-conda: true
+          activate-environment: md-desktop
+          environment-file: environment.yml
       - name: Build MacOS App
-        run: poetry run pyinstaller macos.spec
+        run: pyinstaller macos.spec
       - name: Zip MacOS App
         run: zip -r macos.zip "dist/MegaDetector Desktop.app"
       - uses: actions/upload-artifact@v3
